# otto

./: .gitignore  .golangci.yml  Cargo.toml  README.md  go.mod  otto.yml
.github/workflows/: check.yml  homebrew-formula.yml  release.yml
Formula/: otto.rb
cmd/otto/: main.go
example/: otto.yml
internal/cli/: errors.go  help.go  history_cmd.go  init_cmd.go  root.go  run_cmd.go  version_cmd.go
internal/config/: config.go  config_test.go
internal/history/: history_test.go  store.go
internal/model/: record.go
internal/notify/: notify.go  notify_test.go
internal/output/: history.go  output_test.go  style.go
internal/runner/: runner.go  runner_test.go
internal/version/: version.go
scripts/: install.ps1  install.sh  render-homebrew-formula.sh
src/: app_error.rs  config.rs  envfile.rs  history.rs  lib.rs  main.rs  model.rs  notify.rs  runner.rs  version.rs
src/cli/: mod.rs
src/output/: history.rs  mod.rs  style.rs  tasks.rs
tests/: unit.rs
tests/cli/: mod.rs
tests/config/: mod.rs
tests/envfile/: mod.rs
tests/history/: mod.rs
tests/notify/: mod.rs
tests/output/: history.rs  mod.rs  tasks.rs
tests/runner/: mod.rs
