[package]
name = "otto-cli"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
description = "Task runner with retries, timeouts, history, and notifications"
license = "MIT"
repository = "https://github.com/mcmanussliam/otto"
readme = "README.md"
keywords = ["cli", "tasks", "runner", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "otto"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
humantime = "2.1"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
